--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </nav>
         <!-- Header - set the background image for the header in the line below-->
-        <header class="py-5 bg-image-full" style="background-image: url('../tugas/kk.jpg')">
+        <header class="py-5 bg-image-full" style="background-image: url('kk.jpg')">
             <div class="text-center my-5">
                 <!--<img class="img-fluid rounded-circle mb-4" src="https://dummyimage.com/150x150/6c757d/dee2e6.jpg" alt="..." />-->
                 <h1 class="text-dark fs-3 fw-bolder text-white">DEA ZAHARA ZALZABILA</h1>
